--- a/src/components/Pages/Customers/customers.css
+++ b/src/components/Pages/Customers/customers.css
@@ -9,14 +9,14 @@
 }
 
 .customers-container .header{
-    
     grid-column: 1/2;
     font-weight: lighter;
     margin-bottom: 3rem;
 }
 
-@media (min-width: 650px){
+/* Media queries */
 
+@media (min-width: 750px){
     .customers-container{
          grid-template-columns: 1fr 1fr;
     }    
@@ -24,9 +24,9 @@
         grid-column: 1/3;
     }
 } 
+
 @media (min-width: 1100px){
     .customers-container{
-
         grid-template-columns: 1fr 1fr 1fr;
     }
     .customers-container .header{
@@ -36,16 +36,15 @@
 
 @media (min-width: 1400px){
     .customers-container{
-
         grid-template-columns: 1fr 1fr 1fr 1fr;
     }
     .customers-container .header{
         grid-column: 1/5;
     }
 }
+
 @media (min-width: 1700px){
     .customers-container{
-
         grid-template-columns: repeat(5, 1fr);
     }
     .customers-container .header{
