--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;700&display=swap');
 body, html {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  /* background-color: #A1EAFB; */
   background-color: #2F86A6;
   color: #FDFDFD;
-  
-  
+  font-family: 'Poppins', sans-serif;
 }
